SQAF-1-BE added; readme.md enlarged

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>W3.CSS Template</title>
+    <title>Alexander Vorvul's Site</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
@@ -79,14 +79,21 @@
                 to practical approaches that help create reliable and efficient
                 products.
             <ul>What’s inside:
-                <li>Fundamental concepts of testing</li>
-                <li>Practical methods for improving quality</li>
-                <li>Tips for QA engineers</li>
-            </ul>
-            <p> If you’re interested in the world of QA, this book is definitely for you—at the moment, it is
-                only <a href="./assets/pdf/SQAF.pdf"
+                <li>Quality Assurance history</li>
+            <li>Software development life cycle</li>
+            <li>Software testing life cycle</li>
+            <li>SDLC Models</li>
+            <li>Scrum Framework</li>
+            <li>Test Documentation</li>
+            <li>Software Testing Classification</li>
+        </ul>
+            <p>If you’re interested in the world of QA, this book is definitely for you</p>
+            <p>At the moment, it is available <a href="./assets/pdf/SQAF-1-EN.pdf"
                         class="w3-hover-opacity"
-                        title="Software Quality Assurance Fundamentals book">available in English</a>, but
+                        title="Software Quality Assurance Fundamentals book">in English</a>
+                and <a href="./assets/pdf/SQAF-1-EN.pdf"
+                       class="w3-hover-opacity"
+                       title="Асновы спрыяння якасці праграмнага дачынення">in Belarusian</a>, but
                 translations into other languages are coming soon.</p>
         </div>
     </div>
